email config wosihldi

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@
 db.sqlite3
 users/__pycache__/
 config/__pycache__/
-service/__pycache__/
+service/__pycache__
+users/migrations/__pycache__/
+service/migrations/__pycache__/
