--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ oauthlib==3.2.2
 packaging==23.1
 pycparser==2.21
 PyJWT==2.8.0
+python-decouple==3.8
 python3-openid==3.2.0
 pytz==2023.3.post1
 PyYAML==6.0.1
