--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /.idea
 .env
 db.sqlite3
+users/__pycache__/
+config/__pycache__/
+service/__pycache__
+users/migrations/__pycache__/
+service/migrations/__pycache__/
+/media/
+chat/__pycache__/
